[package]
name = "sqrt"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.9.0" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.9.0" }
radix-engine-constants = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.9.0" }
radix-engine-stores = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.9.0" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.9.0" }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.9.0" }


[dev-dependencies]

[profile.release]
opt-level = 's'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = "debuginfo"    # Strip debug info.
overflow-checks = true # Panic in the case of an overflow.

[lib]
crate-type = ["cdylib", "lib"]